<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".privacy">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="#000"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/privecy"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginLeft="10dp"
        android:text="@string/privecy2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#d60808"
        android:layout_marginLeft="10dp"
        android:text="@string/privecy3"/>
</LinearLayout>