<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="#000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvNameMain"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#89c4c1"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:longClickable="true"/>
            <TextView
                android:id="@+id/tvNumberMain"
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textColor="#ae1e1e"
                android:textStyle="bold"
                android:text="@string/number"
                android:longClickable="true"/>

            <TextView
                android:id="@+id/add"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginRight="5dp"
                android:background="@mipmap/addcon"
                android:longClickable="true"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:textColor="#540303"
                android:longClickable="true"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_weight="4"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="true"
                android:layout_marginEnd="10sp"
                android:textColor="#ffffff"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/tvTypesms"
                android:gravity="right"
                android:layout_width="40sp"
                android:layout_height="38sp"
                android:layout_marginEnd="5sp"
                android:longClickable="true"
                android:background="@mipmap/sms5"
                android:backgroundTint="#c28a08"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:background="#666666"
        tools:ignore="SmallSp" />
    </LinearLayout>